Creacion del Titulos y Intro

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
     </header>
     <main>
         <section>
+            <div class="Texto">
             <h1>Bienvenido a Guitargent</h1>
+           
             <p>Guitargent es una tienda Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est accusamus modi, minima nam in corrupti possimus voluptatum debitis repellendus velit facere! Quaerat libero temporibus eos laudantium tempore sit quidem itaque?</p>
-
+    
+           </div>
+           <div class="Texto2">
+            <h1>Que Ofrecemos</h1>
+            <p>Guitargent es una tienda Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est accusamus modi, minima nam in corrupti possimus voluptatum debitis repellendus velit facere! Quaerat libero temporibus eos laudantium tempore sit quidem itaque Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quasi sint cupiditate, saepe deleniti praesentium unde corporis? Reiciendis quas maxime nesciunt asperiores ea eligendi nisi, laudantium quidem et, necessitatibus veritatis Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugit excepturi et veritatis? Provident, autem quia fugiat et qui aspernatur, quis voluptatibus natus eum ea dolores, inventore sequi dolorum dolorem?</p>
+           </div>
             <article>
                 <div class="container text-center">
                     <div class="row row-cols-4">
