Creacion del Catalogo de Guitarras

--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
             <p>Guitargent es una tienda Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est accusamus modi, minima nam in corrupti possimus voluptatum debitis repellendus velit facere! Quaerat libero temporibus eos laudantium tempore sit quidem itaque Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quasi sint cupiditate, saepe deleniti praesentium unde corporis? Reiciendis quas maxime nesciunt asperiores ea eligendi nisi, laudantium quidem et, necessitatibus veritatis Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugit excepturi et veritatis? Provident, autem quia fugiat et qui aspernatur, quis voluptatibus natus eum ea dolores, inventore sequi dolorum dolorem?</p>
            </div>
             <article>
+                <h2>Guitarras Disponibles en Este Momento</h2>
                 <div class="container text-center">
                     <div class="row row-cols-4">
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
-                      <div class="col">Column</div>
+                      <div class="col"><img class="guitarra1" src="./img/lespual final.webp" alt=""> <figcaption> Fue una de las más importantes figuras en el desarrollo de instrumentos musicales eléctricos y técnicas de grabación. Fue pionero en el desarrollo de las guitarras de cuerpo macizo con el diseño de los modelos Gibson Les Paul, que adoptaron su nombre, y en la grabación multipista. Su destreza en el manejo de la guitarra y las innovaciones técnicas que introdujo en el instrumento le hicieron ser conocido como «El mago de Waukesha</figcaption> </div>
+                      <div class="col"><img src="./img/sg.webp" alt=""> <figcaption> La Gibson SG es un modelo de guitarra eléctrica sacada al mercado en 1961 (como la Gibson Les Paul SG)1​ por Gibson, y que sigue en producción desde entonces junto a sus muchas variaciones. La SG Standard es el modelo de guitarra más vendido de Gibson.2​ </figcaption> </div>
+                      <div class="col"><img src="./img/ibañez.webp" alt="">  <figcaption>a. El mercado japonés queda desabastecido, por lo que el importador decide en 1935 empezar a fabricar guitarras españolas por su cuenta y las distribuye con el nombre "Ibanez Salvador". Luego cambió el nombre a "Ibanez".  </figcaption> </div>
+                      <div class="col"><img src="./img/telecaster.webp" alt="">  <figcaption>La Fender Stratocaster, popularmente conocida como Strat o Strato, es un modelo de guitarra eléctrica diseñado entre 1952 y 1954 por Leo Fender, Bill Carson, George Fullerton y Freddie Tavares. Siendo fabricada y comercializada por Fender Musical Instruments Corporation desde 1954 a la actualidad. Es una guitarra de doble cutaway  </figcaption>  </div>
+                      <div class="col"><img src="./img/explorer.webp" alt=""> <figcaption> Gibson Explorer, o X-plorer (desde 2002) es una guitarra eléctrica de cuerpo macizo fabricada por Gibson. Fue presentada en 1958, como desarrollo de un prototipo previo denominado «Futura». Se pretendía con ella introducir en el mercado un modelo de líneas radicales e inspiración futurista, como ocurría con sus hermanas, la Flying V y la Gibson Moderne. Inicialmente fracasó y dejó de fabricarse en 1959. Sin embargo, en 1975, Gibson comienza la reedición de la Explorer debido al éxito de diseños similares de otras compañías. </figcaption> </div>
+                      <div class="col"><img src="./img/megade.webp" alt=""> <figcaption> La Gibson Flying V es una guitarra eléctrica popular lanzada al mercado en el año 1958 por Gibson. Su principal característica es su diseño en forma de "V" invertida, siendo comúnmente utilizada por guitarristas de heavy metal.  </figcaption>  </div>
+                    
                     </div>
                   </div>
             </article>
         </section>
     </main>
+
+    <footer> <h3>Todos los Derechos Reservados@</h3> </footer>
 </body>
 </html>
