creacion del HTML Clases

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section>
             <div class="Texto">
-            <h1>Bienvenido a Guitargent</h1>
+            <h1 class="titule">Bienvenido a Guitargent</h1>
            
             <p>Guitargent es una tienda Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est accusamus modi, minima nam in corrupti possimus voluptatum debitis repellendus velit facere! Quaerat libero temporibus eos laudantium tempore sit quidem itaque?</p>
     
