--- a/html/clases.html
+++ b/html/clases.html
@@ -13,7 +13,7 @@
 
         <img src="./img/Cool Text - Guitargent 431151620319490.png" alt="icono">
         </figure>
-        <nav>
+        <nav class="navbar navbar-expand-md">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../html/clases.html">Aprender</a></li>
