nueva pagina Saber

--- a/html/clases.html
+++ b/html/clases.html
@@ -11,7 +11,7 @@
     <header>
         <figure class="icon">
 
-        <img src="./img/Cool Text - Guitargent 431151620319490.png" alt="icono">
+        <img src="../img/Cool Text - Guitargent 431151620319490.png" alt="icono">
         </figure>
         <nav class="navbar navbar-expand-md">
             <ul>
