--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="./html/clases.html">Aprender</a></li>
+                <li><a href="./html/saber.html">Saber de Nosotros</a></li>
+                <li><a href="">Comprar</a></li>
             </ul>
         </nav>
     </header>
