--- a/html/comprar.html
+++ b/html/comprar.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guitargent</title>
 </head>
 <body>
-    
+    <header>
+        <figure class="icon">
+
+        <img src="../img/Cool Text - Guitargent 431151620319490.png" alt="icono">
+        </figure>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../html/clases.html">Aprender</a></li>
+                <li><a href="../html/saber.html">Saber de Nosotros</a></li>
+                <li><a href="../html/comprar.html">Comprar</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Registrarse Aqui para acceder a la Compra</h1>
+            
+        </section>
+    </main>
 </body>
 </html>
