Creacion de un Form

--- a/html/clases.html
+++ b/html/clases.html
@@ -17,6 +17,8 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../html/clases.html">Aprender</a></li>
+                <li><a href="../html/saber.html">Saber de Nosotros</a></li>
+                <li><a href="../html/comprar.html">Comprar</a></li>
             </ul>
         </nav>
     </header>
