insertacion de scss

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./html/clases.html">Aprender</a></li>
                 <li><a href="./html/saber.html">Saber de Nosotros</a></li>
-                <li><a href="">Comprar</a></li>
+                <li><a href="./html/comprar.html">Comprar</a></li>
             </ul>
         </nav>
     </header>
